更新模板版本号以强制刷新浏览器缓存

--- a/templates/anchor_system_real.html
+++ b/templates/anchor_system_real.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <!-- Version: 2026-01-01-03:00 删除市场下跌硬度分析模块，更新下跌强度规则 -->
+    <!-- Version: 2026-01-01-04:15 更新下跌强度提示文本为"交易对的空仓盈利要大于X%" -->
     <title>🔴 实盘锚点系统 - OKEx持仓监控</title>
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
     <style>
